streak + small changes
