# swagger.json
@@ -1266,6 +1266,10 @@
           "type": "integer",
           "example": 1
         },
+        "is_streak_active_today": {
+          "type": "boolean",
+          "example": false
+        },
         "name": {
           "type": "string",
           "example": "John"
@@ -1273,6 +1277,10 @@
         "registration_date": {
           "type": "string",
           "example": "2022-09-09T10:10:10+09:00"
+        },
+        "streak": {
+          "type": "integer",
+          "example": 1
         },
         "surname": {
           "type": "string",
